update project titles and add design system
closes #7

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
     <header>
         <nav>
-            <a href="#">design by <em>Jordan Rich</em></a>
+            <a href="/.">design by <em>Jordan Rich</em></a>
             <a href="contact.html">contact</a>
             <a href="about.html">about</a>
+            <a href="/archive.html">archive</a>
 
         </nav>
 
@@ -23,34 +24,34 @@
        
     <section>
         <article>
-            <img src="/images/009.png" alt="">
+            <a href="/projects/010.html"><img src="/images/009.png" alt=""></a>
             <h2 class="feed"><a href="/projects/010.html"> Chanda and the passengers - graphic art </a></h2>
         </article>
         <article>
-            <img src="/images/12.png" alt="">
-            <h2 class="feed"><a href="/projects/test.html"> Chanda and the passengers - graphic art </a></h2>
+            <a href="/projects/test.html"><img src="/images/12.png" alt=""></a>
+            <h2 class="feed"><a href="/projects/test.html"> Chanda and the passengers - web design </a></h2>
         </article>
         <article>
-            <img src="/images/013.png" alt="">
-            <h2 class="feed"><a href="/projects/test.html"> Chanda and the passengers - graphic art </a></h2>
+            <a href=""><img src="/images/013.png" alt=""></a>
+            <h2 class="feed"><a href="/projects/test.html"> Stank Fitness - web design</a></h2>
         </article>
         <article>
-            <img src="/images/14.png" alt="">
+            <a href=""><img src="/images/14.png" alt=""></a>
             <h2 class="feed"><a href="/projects/test.html"> West Side Labs - branding and logo  </a></h2>
         </article>
         <article>
-            <img src="/images/011.png" alt="">
-            <h2 class="feed"><a href="/projects/test.html"> West Side Labs - branding and logo  </a></h2>
+            <a href=""><img src="/images/011.png" alt=""></a>
+            <h2 class="feed"><a href="/projects/test.html"> MARTA Transit Map Experiment  </a></h2>
         </article>
 
 
         <article>
-            <img src="/images/medicinal-mamma.png" alt="">
+            <a href=""><img src="/images/medicinal-mamma.png" alt=""></a>
             <h2 class="feed"><a href="#"> Chanda & The Passengers - Medicinal Mamma cover art   </a></h2>
         </article>
 
         <article>
-            <img src="/images/black-gold.png" alt="">
+            <a href=""><img src="/images/black-gold.png" alt=""></a>
             <h2 class="feed"><a href="#"> DJ BlackGold creative direction   </a></h2>
         </article>
         <article>
@@ -58,12 +59,12 @@
             <h2 class="feed"><a href="#"> dit dash records - logo   </a></h2>
         </article>
         <article>
-            <img src="/images/tdanielle.png" alt="">
-            <h2 class="feed"><a href="#"> SOS band - marketing material  </a></h2>
+            <a href=""><img src="/images/tdanielle.png" alt=""></a>
+            <h2 class="feed"><a href="/projects/002.html"> T.danielle - Business Card and Logo </a></h2>
         </article>
         <article>
-            <img src="/images/sos.png" alt="">
-            <h2 class="feed"><a href="#"> SOS band - marketing material  </a></h2>
+            <a href="/projects/001.html"><img src="/images/sos.png" alt=""></a>
+            <h2 class="feed"><a href="/projects/001.html"> SOS band - marketing material  </a></h2>
         </article>
     </section>
 
