--- a/projects/010.html
+++ b/projects/010.html
@@ -10,20 +10,14 @@
 <body>
     <header>
         <nav>
-            <a href="#">design by <em>Jordan Rich</em></a>
-            <a href="contact.html">contact</a>
-            <a href="about.html">about</a>
-
+            <a href="/">← back</a> |
+            <a href="/projects/test2.html">next project→</a>
         </nav>
 
     </header>
 
 
-    <nav>
-        <a href="/projects/test3.html"> ← previous project</a> |
-        <a href="/projects/test2.html">next project→</a>
 
-    </nav>
     <main>
 
 
@@ -52,9 +46,6 @@
     </main>
 
 
-    <footer>
-
-    </footer>
 
 </body>
 
