fix header links
finalized the main navigation on pages. Added simple back to root directory link for post/project pages. This keeps the need to change the nav for all pages down to a minimum.

--- a/projects/010.html
+++ b/projects/010.html
@@ -10,8 +10,7 @@
 <body>
     <header>
         <nav>
-            <a href="/">← back</a> |
-            <a href="/projects/test2.html">next project→</a>
+            <a href="/">← back</a> 
         </nav>
 
     </header>
@@ -28,12 +27,12 @@
 
             <p> Various graphic art for past shows for Chanda & The Passegners a funk band based in Montréal, QC.</p>
 
-            <img src="/images/p010-3.png" alt="">
+            <p><img src="/images/p010-3.png" alt=""></p>
 
 
-                <img src="/images/p010.png" alt="">
+                <p><img src="/images/p010.png" alt=""></p>
 
-                <img src="/images/p010-2.png" alt="">
+                <p><img src="/images/p010-2.png" alt=""></p>
 
 
 
