add each project feature image and post structure

--- a/index.html
+++ b/index.html
@@ -28,38 +28,38 @@
             <h2 class="feed"><a href="/projects/010.html"> Chanda and the passengers - graphic art </a></h2>
         </article>
         <article>
-            <a href="/projects/test.html"><img src="/images/12.png" alt=""></a>
+            <a href="/projects/009.html"><img src="/images/12.png" alt=""></a>
             <h2 class="feed"><a href="/projects/test.html"> Chanda and the passengers - web design </a></h2>
         </article>
         <article>
-            <a href=""><img src="/images/013.png" alt=""></a>
+            <a href="/projects/008.html"><img src="/images/013.png" alt=""></a>
             <h2 class="feed"><a href="/projects/test.html"> Stank Fitness - web design</a></h2>
         </article>
         <article>
-            <a href=""><img src="/images/14.png" alt=""></a>
+            <a href="/projects/007.html"><img src="/images/14.png" alt=""></a>
             <h2 class="feed"><a href="/projects/test.html"> West Side Labs - branding and logo  </a></h2>
         </article>
         <article>
-            <a href=""><img src="/images/011.png" alt=""></a>
+            <a href="/projects/006.html"><img src="/images/011.png" alt=""></a>
             <h2 class="feed"><a href="/projects/test.html"> MARTA Transit Map Experiment  </a></h2>
         </article>
 
 
         <article>
-            <a href=""><img src="/images/medicinal-mamma.png" alt=""></a>
+            <a href="/projects/005.html"><img src="/images/medicinal-mamma.png" alt=""></a>
             <h2 class="feed"><a href="#"> Chanda & The Passengers - Medicinal Mamma cover art   </a></h2>
         </article>
 
         <article>
-            <a href=""><img src="/images/black-gold.png" alt=""></a>
+            <a href="/projects/004.html"><img src="/images/black-gold.png" alt=""></a>
             <h2 class="feed"><a href="#"> DJ BlackGold creative direction   </a></h2>
         </article>
         <article>
-            <img src="/images/dit-dash.png" alt="">
+            <a href="/projects/003.html"><img src="/images/dit-dash.png" alt=""></a>
             <h2 class="feed"><a href="#"> dit dash records - logo   </a></h2>
         </article>
         <article>
-            <a href=""><img src="/images/tdanielle.png" alt=""></a>
+            <a href="/projects/002.html"><img src="/images/tdanielle.png" alt=""></a>
             <h2 class="feed"><a href="/projects/002.html"> T.danielle - Business Card and Logo </a></h2>
         </article>
         <article>
