add info to project 8

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h2 class="feed"><a href="/projects/test.html"> Chanda and the passengers - web design </a></h2>
         </article>
         <article>
-            <a href="/projects/008.html"><img src="/images/013.png" alt=""></a>
+            <a href="/projects/008.html"><img src="/images/stank-fitness-feature.png" alt=""></a>
             <h2 class="feed"><a href="/projects/test.html"> Stank Fitness - web design</a></h2>
         </article>
         <article>
