--- a/projects/005.html
+++ b/projects/005.html
@@ -26,9 +26,15 @@
             <h2> Medicinal Mamma Cover EP - Cover art </h2>
             <img src="/images/medicinal-mamma.png" alt="">
             <!-- content goes here  -->
+            <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3505933085/size=small/bgcol=ffffff/linkcol=0687f5/transparent=true/" seamless><a href="https://chandaandthepassengers.bandcamp.com/album/medicinal-love">Medicinal Love by Chanda &amp; The Passengers</a></iframe>
+            <h2>Role</h2>
 
+<ul>
+<li>graphic design</li>
+</ul>
+            </article>
 
-        </article>
+            
 
     </main>
 
