--- a/projects/007.html
+++ b/projects/007.html
@@ -27,6 +27,21 @@
             <img src="/images/14.png" alt=" westide labs logo">
             <!-- content goes here  -->
 
+            <img src="/images/westide-labs-feature.png" alt="">
+
+            <p><a class="autolink" href="https://westsidelabs.io">https://westsidelabs.io</a></p>
+
+            <h2>Role</h2>
+            
+            <ul>
+            <li>Creative direction</li>
+            <li>Logo design</li>
+            <li>Technical consulting</li>
+            </ul>
+
+            <h2>Rejected Logos</h2>
+
+            <img src="/images/west-side-rejects.png" alt="">
 
         </article>
 
