fix djblack gold feature image

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </article>
 
         <article>
-            <a href="/projects/004.html"><img src="/images/black-gold.png" alt=""></a>
+            <a href="/projects/004.html"><img src="/images/djbg-001.png" alt=""></a>
             <h2 class="feed"><a href="#"> DJ BlackGold creative direction   </a></h2>
         </article>
         <article>
