add marta map project

--- a/projects/006.html
+++ b/projects/006.html
@@ -26,11 +26,20 @@
             <h2> MARTA Mapp transit Experiment</h2>
 
 
-            <p>
-                coming soon...
-            </p>
-            <!-- content goes here  -->
+        <img src="/images/marta-map-feature-01.png" alt="">
 
+
+        <h2>Background</h2>
+
+<p>A self initiated experimental project. Where I intended on getting a better understanding of how maps are designed. This project by no means polished. </p>
+
+<p>The current MARTA Rail map consists of a traditional layout that mimics an abstract form of Atlanta, Georgia. </p>
+
+<p>The problem was reading the map required viewing the station names in a sideways manner. </p>
+
+<p>Enter my experiment the goal was to attempt to re-design the map with an isometric view.</p>
+            <!-- content goes here  -->
+            <img src="/images/marta-mockup.png" alt="">
 
         </article>
 
