--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <a href="/.">design by <em>Jordan Rich</em></a>
+            <a href="/.">Jordan Rich </a>
             <a href="contact.html">contact</a>
             <a href="about.html">about</a>
             <a href="/archive.html">archive</a>
@@ -22,7 +22,7 @@
    
    <main>
        
-    <section>
+    <section class="portfolio">
         <article>
             <a href="/projects/010.html"><img src="/images/009.png" alt=""></a>
             <h2 class="feed"><a href="/projects/010.html"> Chanda and the passengers - graphic art </a></h2>
