change colors and fix nav

--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
 <body>
     <header>
         <nav>
-            <a href="/.">Jordan Rich </a>
-            <a href="contact.html">contact</a>
-            <a href="about.html">about</a>
-            <a href="/archive.html">archive</a>
+            <p><a href="/.">Jordan Rich </a></p>
+
 
         </nav>
-
+<p>Portfolio de conception web</p>
     </header>
 
    
